<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="my_title">My Nanodegree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">CAPSTONE: My own App</string>

    <string name="toast_pre">This will launch my</string>
    <string name="toast_post">application!</string>
</resources>
